# serde_mango

./: Cargo.toml  README.md
src/: de.rs  lib.rs  parse.rs  write.rs
tests/: enum_seq.rs  smoke.rs
