[package]
name = "serde_mango"
version = "0.2.0"
authors = ["arcnmx"]

description = "MangoHud's config {de,}serialization"
keywords = ["ini", "cfg", "serde"]

documentation = "http://arcnmx.github.io/serde-ini/serde_ini"
repository = "https://github.com/arcnmx/serde-ini"
readme = "README.md"
license = "MIT"

[dependencies]
serde = "^1.0.0"
result = "^1.0.0"
void = "^1.0.2"

[dev-dependencies]
serde_derive = "^1.0.0"
